refactor: 이미지, 채광, 방향 로직 분리